<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <!-- Reusable Toolbar -->
    <include
        android:id="@+id/toolbarSecondary"
        layout="@layout/toolbar_secondary" />


    <!-- About Description -->
    <TextView
        android:id="@+id/tvDescription"
        style="@style/ClospaceBody"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"

        android:text="@string/about_description"

        app:layout_constraintTop_toBottomOf="@id/toolbarSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Version Heading -->
    <TextView
        android:id="@+id/tvVersionLabel"
        style="@style/ClospaceLabel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"

        android:text="@string/version"

        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvDescription"/>

    <!-- Version Number -->
    <TextView
        android:id="@+id/tvVersion"
        style="@style/ClospaceBody"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"

        android:text="@string/version_number"

        app:layout_constraintTop_toBottomOf="@id/tvVersionLabel"
        app:layout_constraintStart_toStartOf="@id/tvVersionLabel"/>

    <!-- Developer Heading -->
    <TextView
        android:id="@+id/tvDeveloperLabel"
        style="@style/ClospaceLabel"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:text="@string/developer"

        app:layout_constraintTop_toBottomOf="@id/tvVersion"
        app:layout_constraintStart_toStartOf="@id/tvDescription"/>

    <!-- Developer Name -->
    <TextView
        android:id="@+id/tvDeveloper"
        style="@style/ClospaceBody"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:lineSpacingExtra="10dp"

        android:text="@string/developer_name"

        app:layout_constraintTop_toBottomOf="@id/tvDeveloperLabel"
        app:layout_constraintStart_toStartOf="@id/tvDeveloperLabel"/>

</androidx.constraintlayout.widget.ConstraintLayout>